--- a/dinosaur-designs/index.html
+++ b/dinosaur-designs/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Dinosaur Designs</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="/css/main.css">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Dinosaur Designs</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="/css/main.css">
+</head>
+<body>
 
-  </body>
+  <header>
+    <h1><img src="images/dinos-r-us.svg" alt="Dinos ’R’ Us"></h1>
+  </header>
+
+  <main>
+    <h2>Hadrosaur</h2>
+    <figure>
+      <img src="images/hadrosaur.jpg" alt="">
+    </figure>
+  </main>
+</body>
 </html>
